upload nutrition label prototypes

--- a/plans_drawer.html
+++ b/plans_drawer.html
@@ -88,7 +88,20 @@
                 <section id="" class="five-by-seven">
                     <div class="col-left">
 
-                            <div class="card unselectable"></div>
+                        <div class="card unselectable device-info">
+                            <div class="device-image">
+                                <img src="images/devices/AlpineGreen-1.png" />
+                            </div>
+                            <div class="selection">
+                                <div>
+                                    <h4>Apple iPhone 13 Pro Max</h4>
+                                    <p>Alpine Green - 128 GB - AT&T Installment Plan</p>
+                                </div>
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M29.12 4.29L27.7 2.87a3 3 0 00-4.24 0L5.81 20.5a4.91 4.91 0 00-1.27 2.15L2.6 29.37l6.73-1.94a5.13 5.13 0 002.15-1.27L29.12 8.54a3 3 0 000-4.25zM10.06 24.74a3 3 0 01-1.29.77l-3.25.93.94-3.24a3 3 0 01.76-1.29L19.59 9.56l2.84 2.83zM27.71 7.12L23.85 11 21 8.15l3.86-3.86a1 1 0 01.72-.29 1 1 0 01.7.29l1.43 1.42a1 1 0 01.29.71 1 1 0 01-.29.7z"/></svg>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                     <div class="col-right">
@@ -104,7 +117,7 @@
                                 
                                     <div id="drawer-nutrition" class="toggle">
                                         <div class="switch"></div>
-                                        <div>View all Nutrition Labels</div>
+                                        <div>View all Broadband Facts</div>
                                     </div>
 
                                 </div>
@@ -118,11 +131,11 @@
                                                     <span>Featured</span>
                                                 </div>
                                                 <div class="head">
-                                                    <h3>AT&T PlanName Plan</h3>
+                                                    <h3>AT&T Unlimited Premium<sup>SM</sup> Plan</h3>
                                                     <div class="price">
                                                         <div class="price sm">
-                                                            <div class="strikethrough">$00.00/mo</div>
-                                                            <div class="price-point plan">00.00</div>
+                                                            <div class="strikethrough">$60.00/mo</div>
+                                                            <div class="price-point plan">50.00</div>
                                                         </div>
                                                     </div>
                                                     <p class="legal"><u>Lorem ipsum dolor</u></p>
@@ -130,17 +143,23 @@
                                                 <div class="features">
                                                     <h5>Features</h5>
                                                     <ul>
-                                                        <li>Lorem ipsum dolor sit amet</li>
-                                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</li>
-                                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                                                        <li>Lorem ipsum dolor sit amet</li>
+                                                        <li>Unlimited talk, text, and data<br><span>Unlimited high-speed data that can't slow down based on how much you use</span></li>
+                                                        <li>5G access included</li>
+                                                        <li>50GB mobile hotspot per line, per month</li>
+                                                        <li>AT&T ActiveArmor<sup>SM</sup> advanced mobile security<br><span>Free app with public Wi-Fi protection, identity monitoring and more</span></li>
                                                     </ul>
+                                                </div>
+                                                <div class="nutrition-label-accordion">
+                                                    <div class="label">Broadband Facts</div>
+                                                    <div class="carat">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="nutrition-details">
                                                 <div class="nutrition-label">
                                                     <div class="header">
-                                                        <h4>Wireless Facts</h4>
+                                                        <h4>Broadband Facts</h4>
                                                         <p class="legal">Lorem ipsum dolor sit amet</p>
                                                         <div class="close">
                                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M16 1a15 15 0 1015 15A15 15 0 0016 1zm0 28a13 13 0 1113-13 13 13 0 01-13 13zm0-14.41l4.24-4.25 1.42 1.42L17.41 16l4.25 4.24-1.42 1.42L16 17.41l-4.24 4.25-1.42-1.42L14.59 16l-4.25-4.24 1.42-1.42z"/></svg>
@@ -204,11 +223,11 @@
                                                     <span>Featured</span>
                                                 </div>
                                                 <div class="head">
-                                                    <h3>AT&T PlanName Plan</h3>
+                                                    <h3>AT&T Unlimited Extra<sup>®</sup> Plan</h3>
                                                     <div class="price">
                                                         <div class="price sm">
-                                                            <div class="strikethrough">$00.00/mo</div>
-                                                            <div class="price-point plan">00.00</div>
+                                                            <div class="strikethrough">$50.00/mo</div>
+                                                            <div class="price-point plan">40.00</div>
                                                         </div>
                                                     </div>
                                                     <p class="legal"><u>Lorem ipsum dolor</u></p>
@@ -216,17 +235,23 @@
                                                 <div class="features">
                                                     <h5>Features</h5>
                                                     <ul>
-                                                        <li>Lorem ipsum dolor sit amet</li>
-                                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</li>
-                                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                                                        <li>Lorem ipsum dolor sit amet</li>
+                                                        <li>Unlimited talk, text, data + 50GB of Premium Data<br><span>After 50GB, AT&T may temporarily slow data speeds if the network is busy.</span></li>
+                                                        <li>5G access included</li>
+                                                        <li>15GB hotspot data per line</li>
+                                                        <li>AT&T ActiveArmor<sup>SM</sup> advance security<br><span>Free app with Public Wi-Fi Protection, Identity Monitoring, and more.</span></li>
                                                     </ul>
+                                                </div>
+                                                <div class="nutrition-label-accordion">
+                                                    <div class="label">Broadband Facts</div>
+                                                    <div class="carat">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="nutrition-details">
                                                 <div class="nutrition-label">
                                                     <div class="header">
-                                                        <h4>Wireless Facts</h4>
+                                                        <h4>Broadband Facts</h4>
                                                         <p class="legal">Lorem ipsum dolor sit amet</p>
                                                         <div class="close">
                                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M16 1a15 15 0 1015 15A15 15 0 0016 1zm0 28a13 13 0 1113-13 13 13 0 01-13 13zm0-14.41l4.24-4.25 1.42 1.42L17.41 16l4.25 4.24-1.42 1.42L16 17.41l-4.24 4.25-1.42-1.42L14.59 16l-4.25-4.24 1.42-1.42z"/></svg>
@@ -290,11 +315,11 @@
                                                     <span>Featured</span>
                                                 </div>
                                                 <div class="head">
-                                                    <h3>AT&T PlanName Plan</h3>
+                                                    <h3>AT&T Unlimited Starter<sup>®</sup> Plan</h3>
                                                     <div class="price">
                                                         <div class="price sm">
-                                                            <div class="strikethrough">$00.00/mo</div>
-                                                            <div class="price-point plan">00.00</div>
+                                                            <div class="strikethrough">$45.00/mo</div>
+                                                            <div class="price-point plan">35.00</div>
                                                         </div>
                                                     </div>
                                                     <p class="legal"><u>Lorem ipsum dolor</u></p>
@@ -302,17 +327,23 @@
                                                 <div class="features">
                                                     <h5>Features</h5>
                                                     <ul>
-                                                        <li>Lorem ipsum dolor sit amet</li>
-                                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</li>
-                                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                                                        <li>Lorem ipsum dolor sit amet</li>
+                                                        <li>Unlimited talk, text, and data<br><span>AT&T may temporarily slow data speeds if the network is busy.</span></li>
+                                                        <li>5G access included</li>
+                                                        <li>3GB hotspot data per line</li>
+                                                        <li>AT&T ActiveArmor<sup>SM</sup> mobile security<br><span>Including spam & fraud call blocking, and more.</span></li>
                                                     </ul>
+                                                </div>
+                                                <div class="nutrition-label-accordion">
+                                                    <div class="label">Broadband Facts</div>
+                                                    <div class="carat">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="nutrition-details">
                                                 <div class="nutrition-label">
                                                     <div class="header">
-                                                        <h4>Wireless Facts</h4>
+                                                        <h4>Broadband Facts</h4>
                                                         <p class="legal">Lorem ipsum dolor sit amet</p>
                                                         <div class="close">
                                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M16 1a15 15 0 1015 15A15 15 0 0016 1zm0 28a13 13 0 1113-13 13 13 0 01-13 13zm0-14.41l4.24-4.25 1.42 1.42L17.41 16l4.25 4.24-1.42 1.42L16 17.41l-4.24 4.25-1.42-1.42L14.59 16l-4.25-4.24 1.42-1.42z"/></svg>
