--- a/plans.html
+++ b/plans.html
@@ -230,7 +230,7 @@
                                         <h3>Broadband Facts</h3>
                                         <hr style="height:2px;">
                                         <p>AT&T</p>
-                                        <h5>AT&T Value Plus Plan</h5>
+                                        <h5 id="planname">AT&T Value Plus Plan</h5>
                                         <p>Mobile Broadband Consumer Disclosure</p>
 
 
@@ -238,7 +238,7 @@
                                     
                                         <div class="col price">
                                             <p>Monthly Price</p>
-                                            <p>$60.00</p>
+                                            <p id="planprice">$60.00</p>
                                         </div>
                                        
 
