--- a/plans_drawer.html
+++ b/plans_drawer.html
@@ -60,8 +60,8 @@
                     </div>
                 </nav>
 
-                <div class="border-bottom">
-                    <div id="breadcrumbs">
+                <div id="breadcrumbs" class="border-bottom">
+                    <div>
                         <div class="header">
                             <div class="eyebrow sm" style="display:none;">Phones & Devices</div>
                             <div class="title">
@@ -161,7 +161,7 @@
                                                     <h3>Broadband Facts</h3>
                                                     <hr style="height:2px;">
                                                     <p>AT&T</p>
-                                                    <h5>AT&T Value Plus Plan</h5>
+                                                    <h5>AT&T Unlimited Premium<sup>SM</sup> Plan</h5>
                                                     <p>Mobile Broadband Consumer Disclosure</p>
 
 
@@ -383,7 +383,7 @@
                                                     <h3>Broadband Facts</h3>
                                                     <hr style="height:2px;">
                                                     <p>AT&T</p>
-                                                    <h5>AT&T Value Plus Plan</h5>
+                                                    <h5>AT&T Unlimited Extra<sup>®</sup> Plan</h5>
                                                     <p>Mobile Broadband Consumer Disclosure</p>
 
 
@@ -605,7 +605,7 @@
                                                     <h3>Broadband Facts</h3>
                                                     <hr style="height:2px;">
                                                     <p>AT&T</p>
-                                                    <h5>AT&T Value Plus Plan</h5>
+                                                    <h5>AT&T Unlimited Starter<sup>®</sup> Plan</h5>
                                                     <p>Mobile Broadband Consumer Disclosure</p>
 
 
@@ -802,7 +802,6 @@
             <div id="sticky-footer">
                 <div id="footer-pricing">
                     <div>
-
                         <div id="price-monthly" class="pricing-details">
                             <div class="price sm">
                                 <div class="price-point plan adjustable-price">0.00</div>
