update accordion labels

--- a/plans.html
+++ b/plans.html
@@ -215,7 +215,7 @@
                             <div class="card unselectable content accordion">
                                 <div class="nutrition-label-accordion full-card accordion-label active">
                                     <div class="label">
-                                        <div>Broadband Facts</div>
+                                        <div>Mobile Broadband Consumer Disclosure</div>
                                         <div class="accordion-notice">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8.5 1A7.5 7.5 0 1016 8.5 7.5 7.5 0 008.5 1zM7.33 11.54L4.65 8.85l.7-.7 2 2 4.32-4.32.7.71z"/></svg>
                                             New facts available
