--- a/plans_drawer.html
+++ b/plans_drawer.html
@@ -150,7 +150,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="nutrition-label-accordion">
-                                                    <div class="label">Broadband Facts</div>
+                                                    <div class="label">Mobile Broadband Consumer Disclosure</div>
                                                     <div class="carat">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
                                                     </div>
@@ -372,7 +372,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="nutrition-label-accordion">
-                                                    <div class="label">Broadband Facts</div>
+                                                    <div class="label">Mobile Broadband Consumer Disclosure</div>
                                                     <div class="carat">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
                                                     </div>
@@ -594,7 +594,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="nutrition-label-accordion">
-                                                    <div class="label">Broadband Facts</div>
+                                                    <div class="label">Mobile Broadband Consumer Disclosure</div>
                                                     <div class="carat">
                                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
                                                     </div>
