--- a/plans_smb.html
+++ b/plans_smb.html
@@ -295,7 +295,7 @@
                                         <h3>Broadband Facts</h3>
                                         <hr style="height:2px;">
                                         <p>AT&T</p>
-                                        <h5 id="planname">AT&T Value Plus Plan</h5>
+                                        <h5 id="planname">AT&T Business Unlimited Elite<sup>SM</sup></h5>
                                         <p>Mobile Broadband Consumer Disclosure</p>
 
 
