mobile updates and fixes

--- a/pdp.html
+++ b/pdp.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="tab-container">
-                    <div class="completed">Select device</div>
+                    <div class="completed" onClick="window.location = 'plp.html'">Select device</div>
                     <div class="active">Configure device</div>
                     <div>Choose plan</div>
                     <div>Select add-ons</div>
@@ -132,7 +132,7 @@
                 
                 <div class="col-right">
                     <div id="configure" class="spacing-64">
-                        <section class="full-left">
+                        <section class="full-left stack">
                             <div id="configure-header">
                                 <div>
                                     <div class="rating">
@@ -182,7 +182,7 @@
 
                         <section id="configure-options">
 
-                            <div id="configure-color" class="configure-option opened unselected">
+                            <div id="configure-color" class="configure-option opened selected">
                                 <div class="configure-option-head">
                                     <div class="label">
                                         <div class="type">Color</div>
@@ -199,7 +199,7 @@
                                 </div>
                             </div>
 
-                            <div id="configure-capacity" class="configure-option opened unselected">
+                            <div id="configure-capacity" class="configure-option opened selected">
                                 <div class="configure-option-head">
                                     <div class="label">
                                         <div class="type">Capacity</div>
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
 
-                            <div id="configure-pricing" class="configure-option opened unselected">
+                            <div id="configure-pricing" class="configure-option opened selected">
                                 <div class="configure-option-head">
                                     <div class="label">
                                         <div class="type">Pricing option</div>
@@ -246,7 +246,7 @@
                                 </div>
                             </div>
 
-                            <div id="configure-upgrade" class="configure-option opened unselected">
+                            <div id="configure-upgrade" class="configure-option opened selected">
                                 <div class="configure-option-head">
                                     <div class="label">
                                         <div class="type">Early upgrade with AT&T Next Up<sup>SM</sup></div>
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
 
-                            <div id="configure-tradein" class="configure-option opened unselected">
+                            <div id="configure-tradein" class="configure-option opened selected">
                                 <div class="configure-option-head">
                                     <div class="label">
                                         <div class="type">Trade in and save</div>
@@ -375,7 +375,7 @@
                 <p class="legal">Prices are estimated. Fees and taxes are not included.</p>
             </div>
             <div>
-                <div id="continue" class="button"  onClick="window.location = 'plans_drawer.html'">Continue</div>
+                <div id="continue" class="button" onClick="window.location = 'plans_drawer.html'">Continue</div>
             </div>
         </div>
     </div>
