--- a/plans_carousel.html
+++ b/plans_carousel.html
@@ -64,8 +64,8 @@
                     </div>
                 </div>
                 <div class="tab-container">
-                    <div class="completed">Select device</div>
-                    <div class="completed">Configure device</div>
+                    <div class="completed" onClick="window.location = 'plp.html'">Select device</div>
+                    <div class="completed" onClick="window.location = 'pdp.html'">Configure device</div>
                     <div class="active">Choose plan</div>
                     <div>Select add-ons</div>
                     <div>View cart</div>
