--- a/plans_vertical.html
+++ b/plans_vertical.html
@@ -121,8 +121,8 @@
                             <h3>Plan options</h3>
                             <p>Pick the best plan for each line.</p>
                             <div class="button-group">
-                                <div class="button active">Unlimited Your Way (3)</div>
-                                <div class="button">Other Plans (2)</div>
+                                <div class="button active">Unlimited Your Way</div>
+                                <div class="button">Other Plans</div>
                             </div>
                             <p>All AT&T unlimited plans include unlimited talk, text, and data in the U.S., Canada, and Mexico and 5G access at no extra charge.</p>
                             <p class="legal">Price is only for devices purchased at full price, bring your own, or on installment plan, and after AutoPay & paperless billing discount (starts within 2 bill cycles). Taxes & fees extra.</p>
@@ -854,27 +854,22 @@
 
         <div id="sticky-footer">
             <div id="footer-pricing">
-                <div>
-                    <div id="price-monthly" class="pricing-details">
-                        <div class="price sm">
-                            <div class="price-point plan adjustable-price">0.00</div>
-                        </div>
+                <div id="price-monthly" class="pricing-details">
+                    <div class="price sm">
+                        <div class="price-point plan adjustable-price">0.00</div>
                     </div>
-
-                    <div id="price-today" class="pricing-details">
-                        <div class="price sm">
-                            <div class="price-point retail adjustable-price">0.00</div>
-                        </div>
-                    </div>
-
                 </div>
-                <p class="legal">Prices are estimated. Fees and taxes are not included.</p>
-            </div>
-            <div>
-                <div id="continue" class="button inactive">
-                    <span>Continue</span>
+
+                <div id="price-today" class="pricing-details">
+                    <div class="price sm">
+                        <div class="price-point retail adjustable-price">0.00</div>
+                    </div>
                 </div>
             </div>
+            <div id="footer-cta">
+                <div id="continue" class="button inactive"><span>Continue</span></div>
+            </div>
+            <div id="footer-legal" class="legal">Prices are estimated. Fees and taxes are not included.</div>
         </div>
     </div>
 
