--- a/plans_drawer.html
+++ b/plans_drawer.html
@@ -143,7 +143,7 @@
                                             <span>Featured</span>
                                         </div>-->
                                         <div class="head">
-                                            <h3>AT&T Unlimited Premium<sup>SM</sup> Plan</h3>
+                                            <h3>AT&T Unlimited Premium<sup>SM</sup></h3>
                                             <div class="price">
                                                 <div class="price sm">
                                                     <div class="strikethrough">$60.00/mo</div>
@@ -361,11 +361,10 @@
                                     </div>
                                 </div>
 
-
                                 <div class="card plan">
                                     <div class="header">
                                         <div class="head">
-                                            <h3>AT&T Unlimited Extra<sup>®</sup> Plan</h3>
+                                            <h3>AT&T Unlimited Extra<sup>®</sup></h3>
                                             <div class="price">
                                                 <div class="price sm">
                                                     <div class="strikethrough">$50.00/mo</div>
@@ -586,7 +585,7 @@
                                 <div class="card plan">
                                     <div class="header">
                                         <div class="head">
-                                            <h3>AT&T Unlimited Starter<sup>®</sup> Plan</h3>
+                                            <h3>AT&T Unlimited Starter<sup>®</sup></h3>
                                             <div class="price">
                                                 <div class="price sm">
                                                     <div class="strikethrough">$45.00/mo</div>
@@ -815,23 +814,25 @@
         </div>
 
         <div id="sticky-footer">
-            <div id="footer-pricing">
-                <div id="price-monthly" class="pricing-details">
-                    <div class="price sm">
-                        <div class="price-point plan adjustable-price">0.00</div>
+            <div id="sticky-footer-container">
+                <div id="footer-pricing">
+                    <div id="price-monthly" class="pricing-details">
+                        <div class="price sm">
+                            <div class="price-point plan adjustable-price">0.00</div>
+                        </div>
+                    </div>
+    
+                    <div id="price-today" class="pricing-details">
+                        <div class="price sm">
+                            <div class="price-point retail adjustable-price">0.00</div>
+                        </div>
                     </div>
                 </div>
-
-                <div id="price-today" class="pricing-details">
-                    <div class="price sm">
-                        <div class="price-point retail adjustable-price">0.00</div>
-                    </div>
+                <div id="footer-cta">
+                    <div id="continue" class="button inactive"><span>Continue</span></div>
                 </div>
+                <div id="footer-legal" class="legal">Prices are estimated. Fees and taxes are not included.</div>
             </div>
-            <div id="footer-cta">
-                <div id="continue" class="button"><span>Continue</span></div>
-            </div>
-            <div id="footer-legal" class="legal">Prices are estimated. Fees and taxes are not included.</div>
         </div>
     </div>
 
