--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -185,7 +185,7 @@
                                                         <div class="price-point plan">50</div>
                                                     </div>
                                                 </div>
-                                                <p class="legal"><u>Lorem ipsum dolor</u></p>
+                                                <p class="legal"><u>Read the legal stuff</u></p>
                                             </div>
                                         </div>
                                         <div class="accordions">
@@ -422,7 +422,7 @@
                                                         <div class="price-point plan">40</div>
                                                     </div>
                                                 </div>
-                                                <p class="legal"><u>Lorem ipsum dolor</u></p>
+                                                <p class="legal"><u>Read the legal stuff</u></p>
                                             </div>
                                         </div>
                                         <div class="accordions">
@@ -659,7 +659,7 @@
                                                         <div class="price-point plan">35</div>
                                                     </div>
                                                 </div>
-                                                <p class="legal"><u>Lorem ipsum dolor</u></p>
+                                                <p class="legal"><u>Read the legal stuff</u></p>
                                             </div>
                                         </div>
                                         <div class="accordions">
@@ -890,11 +890,7 @@
                                     <div id="prev" class="pag-button inactive">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M16 31A15 15 0 101 16a15 15 0 0015 15zm0-28A13 13 0 113 16 13 13 0 0116 3zm1.71 19.71L11 16l6.7-6.71 1.42 1.42L13.83 16l5.3 5.29z"/></svg>
                                     </div>
-                                    <div id="pag-bubbles">
-                                        <div class="pag-bubble active"></div>
-                                        <div class="pag-bubble"></div>
-                                        <div class="pag-bubble"></div>
-                                    </div>
+                                    <div id="pag-bubbles"></div>
                                     <div id="next" class="pag-button">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M16 1a15 15 0 1015 15A15 15 0 0016 1zm0 28a13 13 0 1113-13 13 13 0 01-13 13zM14.29 9.29L21 16l-6.7 6.71-1.42-1.42L18.17 16l-5.3-5.29z"/></svg>
                                     </div>
@@ -909,27 +905,24 @@
         </div>
 
         <div id="sticky-footer">
-            <div id="footer-pricing">
-                <div>
+            <div id="sticky-footer-container">
+                <div id="footer-pricing">
                     <div id="price-monthly" class="pricing-details">
                         <div class="price sm">
                             <div class="price-point plan adjustable-price">0.00</div>
                         </div>
                     </div>
-
+    
                     <div id="price-today" class="pricing-details">
                         <div class="price sm">
                             <div class="price-point retail adjustable-price">0.00</div>
                         </div>
                     </div>
-
                 </div>
-                <p class="legal">Prices are estimated. Fees and taxes are not included.</p>
-            </div>
-            <div>
-                <div id="continue" class="button inactive">
-                    <span>Continue</span>
+                <div id="footer-cta">
+                    <div id="continue" class="button inactive"><span>Continue</span></div>
                 </div>
+                <div id="footer-legal" class="legal">Prices are estimated. Fees and taxes are not included.</div>
             </div>
         </div>
     </div>
