--- a/plans_vertical.html
+++ b/plans_vertical.html
@@ -150,7 +150,7 @@
                                                 <div class="price-point plan">50.00</div>
                                             </div>
                                         </div>
-                                        <p class="legal"><u>Lorem ipsum dolor</u></p>
+                                        <p class="legal"><u>Read the legal stuff</u></p>
                                     </div>
                                 </div>
                                 <div class="accordions">
@@ -372,7 +372,6 @@
                                 </div>
                             </div>
 
-
                             <div class="card plan">
                                 <div class="header">
                                     <!--<div class="badge">
@@ -380,14 +379,14 @@
                                         <span>Featured</span>
                                     </div>-->
                                     <div class="head">
-                                        <h3>AT&T Unlimited Extra<sup>®</sup> Plan</h3>
+                                        <h3>AT&T Unlimited Extra<sup>®</sup></h3>
                                         <div class="price">
                                             <div class="price sm">
                                                 <div class="strikethrough">$50.00/mo</div>
                                                 <div class="price-point plan">40.00</div>
                                             </div>
                                         </div>
-                                        <p class="legal"><u>Lorem ipsum dolor</u></p>
+                                        <p class="legal"><u>Read the legal stuff</u></p>
                                     </div>
                                 </div>
                                 <div class="accordions">
@@ -616,14 +615,14 @@
                                         <span>Featured</span>
                                     </div>-->
                                     <div class="head">
-                                        <h3>AT&T Unlimited Starter<sup>®</sup> Plan</h3>
+                                        <h3>AT&T Unlimited Starter<sup>®</sup></h3>
                                         <div class="price">
                                             <div class="price sm">
                                                 <div class="strikethrough">$45.00/mo</div>
                                                 <div class="price-point plan">35.00</div>
                                             </div>
                                         </div>
-                                        <p class="legal"><u>Lorem ipsum dolor</u></p>
+                                        <p class="legal"><u>Read the legal stuff</u></p>
                                     </div>
                                 </div>
                                 <div class="accordions">
@@ -853,23 +852,25 @@
         </div>
 
         <div id="sticky-footer">
-            <div id="footer-pricing">
-                <div id="price-monthly" class="pricing-details">
-                    <div class="price sm">
-                        <div class="price-point plan adjustable-price">0.00</div>
+            <div id="sticky-footer-container">
+                <div id="footer-pricing">
+                    <div id="price-monthly" class="pricing-details">
+                        <div class="price sm">
+                            <div class="price-point plan adjustable-price">0.00</div>
+                        </div>
+                    </div>
+    
+                    <div id="price-today" class="pricing-details">
+                        <div class="price sm">
+                            <div class="price-point retail adjustable-price">0.00</div>
+                        </div>
                     </div>
                 </div>
-
-                <div id="price-today" class="pricing-details">
-                    <div class="price sm">
-                        <div class="price-point retail adjustable-price">0.00</div>
-                    </div>
+                <div id="footer-cta">
+                    <div id="continue" class="button inactive"><span>Continue</span></div>
                 </div>
+                <div id="footer-legal" class="legal">Prices are estimated. Fees and taxes are not included.</div>
             </div>
-            <div id="footer-cta">
-                <div id="continue" class="button inactive"><span>Continue</span></div>
-            </div>
-            <div id="footer-legal" class="legal">Prices are estimated. Fees and taxes are not included.</div>
         </div>
     </div>
 
