--- a/plans_vertical.html
+++ b/plans_vertical.html
@@ -37,6 +37,10 @@
             </div>
         </nav>
         <nav id="sub-nav">
+            <div class="nav-left">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M30 7H2V5h28zm0 8H2v2h28zm0 10H2v2h28z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M21.45 20A11 11 0 1020 21.45l8.26 8.26 1.42-1.42zM13 22a9 9 0 119-9 9 9 0 01-9 9z"/></svg>
+            </div>
             <div class="logo">
                 <img src="images/logo/att_globe_symbol_limited_use_rgb_pos.png" />
             </div>
@@ -53,10 +57,14 @@
                 <div></div>
                 <div></div>
             </div>
+            <div class="nav-right">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M7.08 8L6 4H1v2h3.49l4.15 15.76a3 3 0 002.9 2.24h12a3 3 0 002.89-2.18L30.33 8zm17.37 13.27a1 1 0 01-1 .73H11.54a1 1 0 01-1-.75L7.61 10h20.06zM12 27.5a1.5 1.5 0 11-1.5-1.5 1.5 1.5 0 011.5 1.5zm14 0a1.5 1.5 0 11-1.5-1.5 1.5 1.5 0 011.5 1.5z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M20 15.75a7 7 0 10-8 0A11 11 0 005 26v3h2v-3a9 9 0 0118 0v3h2v-3a11 11 0 00-7-10.25zM11 10a5 5 0 115 5 5 5 0 01-5-5z"/></svg>
+            </div>
         </nav>
 
         <div class="border-bottom">
-            <div id="breadcrumbs">
+            <div id="progress-indicator">
                 <div class="header">
                     <div class="eyebrow sm" style="display:none;">Phones & Devices</div>
                     <div class="title">
@@ -64,12 +72,21 @@
                         <div class="step-count">Step [N] of [N]</div>
                     </div>
                 </div>
-                <div class="tab-container">
-                    <div class="completed" onClick="window.location = ''">Select device</div>
-                    <div class="completed" onClick="window.location = ''">Configure device</div>
-                    <div class="active">Choose plan</div>
-                    <div>Select add-ons</div>
-                    <div>View cart</div>
+                <div class="indicator dt">
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M23.85 30a4.8 4.8 0 01-1.58-.26 31.8 31.8 0 01-20-20 5 5 0 011.2-5.09l1.75-1.78a3.08 3.08 0 014.24 0l3.25 3.25a3 3 0 01.64 3.31l-1.42 3.32a12.37 12.37 0 007.32 7.32l3.32-1.42a3 3 0 013.31.64l3.25 3.25a3 3 0 010 4.24l-1.77 1.77A5 5 0 0123.85 30zM7.34 4a1 1 0 00-.71.3L4.86 6.05a3 3 0 00-.72 3.05A29.82 29.82 0 0022.9 27.86a3 3 0 003.1-.72l1.77-1.77a1 1 0 000-1.42l-3.31-3.25a1 1 0 00-1.1-.21l-3.67 1.57a1 1 0 01-.71 0A14.42 14.42 0 019.91 13a1 1 0 010-.71l1.57-3.68a1 1 0 00-.21-1.1L8.05 4.29A1 1 0 007.34 4z"/></svg>
+                    </div>
+                    <div class="tab-container">
+                        <div class="completed">Select device</div>
+                        <div class="completed">Configure device</div>
+                        <div class="active">Choose plan</div>
+                        <div>Select add-ons</div>
+                        <div>View cart</div>
+                    </div>
+                    <div class="checkout">Checkout</div>
+                </div>
+                <div class="indicator mb">
+                    <div class="progress-bar"><div></div></div>
                 </div>
             </div>
         </div>
@@ -120,10 +137,10 @@
                         <div id="plans-header" class="copy-block">
                             <h3>Plan options</h3>
                             <p>Pick the best plan for each line.</p>
-                            <div class="button-group">
+                            <!--<div class="button-group">
                                 <div class="button active">Unlimited Your Way</div>
                                 <div class="button">Other Plans</div>
-                            </div>
+                            </div>-->
                             <p>All AT&T unlimited plans include unlimited talk, text, and data in the U.S., Canada, and Mexico and 5G access at no extra charge.</p>
                             <p class="legal">Price is only for devices purchased at full price, bring your own, or on installment plan, and after AutoPay & paperless billing discount (starts within 2 bill cycles). Taxes & fees extra.</p>
                         
@@ -400,10 +417,14 @@
                                         <div class="content">
                                             <div class="wrapper">
                                                 <ul>
-                                                    <li>Unlimited talk, text, data + 50GB of Premium Data<br><span>After 50GB, AT&T may temporarily slow data speeds if the network is busy.</span></li>
+                                                    <li>Unlimited talk, text, data + 50GB of Premium Data
+                                                        <div>After 50GB, AT&T may temporarily slow data speeds if the network is busy.</div>
+                                                    </li>
                                                     <li>5G access included</li>
                                                     <li>15GB hotspot data per line</li>
-                                                    <li>AT&T ActiveArmor<sup>SM</sup> advance security<br><span>Free app with Public Wi-Fi Protection, Identity Monitoring, and more.</span></li>
+                                                    <li>AT&T ActiveArmor<sup>SM</sup> advance security
+                                                        <div>Free app with Public Wi-Fi Protection, Identity Monitoring, and more.</div>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -636,10 +657,14 @@
                                         <div class="content">
                                             <div class="wrapper">
                                                 <ul>
-                                                    <li>Unlimited talk, text, and data<br><span>AT&T may temporarily slow data speeds if the network is busy.</span></li>
+                                                    <li>Unlimited talk, text, and data
+                                                        <div>AT&T may temporarily slow data speeds if the network is busy.</div>
+                                                    </li>
                                                     <li>5G access included</li>
                                                     <li>3GB hotspot data per line</li>
-                                                    <li>AT&T ActiveArmor<sup>SM</sup> mobile security<br><span>Including spam & fraud call blocking, and more.</span></li>
+                                                    <li>AT&T ActiveArmor<sup>SM</sup> mobile security
+                                                        <div>Including spam & fraud call blocking, and more.</div>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -874,8 +899,76 @@
         </div>
     </div>
 
-    <footer style="background-color:var(--gray-200);height:0px;">
-
+    <footer>
+        <div class="limited">
+            <div class="link-farm">
+                <div class="lists">
+                    <div class="link-list">
+                        <h6>Connect with Us</h6>
+                        <ul>
+                            <li><a href="">Contact us</a></li>
+                            <li><a href="">Feedback</a></li>
+                            <li><a href="">Community forum</a></li>
+                            <li><a href="">Tech Buzz blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-list">
+                        <h6>AT&T</h6>
+                        <ul>
+                            <li><a href="">About AT&T</a></li>
+                            <li><a href="">Store locations</a></li>
+                            <li><a href="">Careers</a></li>
+                            <li><a href="">5G technology</a></li>
+                            <li><a href="">Coverage maps</a></li>
+                        </ul>
+                    </div>
+                    <div class="link-list">
+                        <h6>Shop</h6>
+                        <ul>
+                            <li><a href="">Devices</a></li>
+                            <li><a href="">Plans</a></li>
+                            <li><a href="">TV</a></li>
+                            <li><a href="">Bundles</a></li>
+                            <li><a href="">Deals</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="soc">
+                    <div class="social">
+                        <ul>
+                            <li><svg><path d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15c-.1-8.3-6.8-15-15-15zm0 29C7.3 29 1 22.7 1 15S7.3 1 15 1s14 6.3 14 14-6.3 14-14 14z M22.3 9.8c-.6.4-1.2.6-1.9.7-1.1-1.1-2.7-1.2-4.1-.3-.7.5-1.2 1.4-1.2 2.3 0 .2 0 .4.1.6-2.3-.1-4.6-1.3-6.1-3.1-.3.5-.4 1-.4 1.6 0 1 .5 1.9 1.3 2.4-.5 0-.9-.2-1.3-.4 0 1.4 1 2.6 2.3 2.9-.3 0-.5.1-.8.1-.2 0-.4 0-.5-.1.4 1.2 1.5 2 2.8 2-1 .8-2.3 1.3-3.8 1.3h-.4c1.3.8 2.9 1.3 4.6 1.3 4.7 0 8.4-3.8 8.4-8.3v-.5c.6-.4 1.1-.9 1.4-1.5-.5.2-1.1.4-1.7.4.7-.1 1.1-.7 1.3-1.4z"></path></svg></li>
+                            <li><svg><path d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15c-.1-8.3-6.8-15-15-15zm0 29C7.3 29 1 22.7 1 15S7.3 1 15 1s14 6.3 14 14-6.3 14-14 14z M15.9 10.9c0-.6.3-.7.6-.7h1.6V7.8h-2.2c-1.6-.1-2.9 1.1-3 2.7v2h-1.5V15h1.5v7.2h3V15h2l.2-2.5h-2.2v-1.6z"></path></svg></li>
+                            <li><svg><path d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15c-.1-8.3-6.8-15-15-15zm0 29C7.3 29 1 22.7 1 15S7.2.9 15 .9s14 6.3 14 14C29 22.7 22.7 29 15 29zm0-19.8h2.8c.4 0 .9.1 1.3.2.6.2 1.1.7 1.3 1.3.2.4.2.9.2 1.3v5.6c0 .4-.1.9-.2 1.3-.2.6-.7 1.1-1.3 1.3-.4.2-.9.2-1.3.2h-5.6c-.4 0-.9-.1-1.3-.2-.6-.2-1.1-.7-1.3-1.3-.2-.4-.2-.9-.2-1.3v-2.8V12c0-.4.1-.9.2-1.3.2-.6.7-1.1 1.3-1.3.4-.2.9-.2 1.3-.2H15m0-1.3h-2.9c-.6 0-1.2.1-1.7.3-.9.4-1.7 1.1-2.1 2.1-.1.6-.3 1.2-.3 1.8v5.8c0 .6.1 1.2.3 1.7.4.9 1.1 1.7 2.1 2.1.5.2 1.1.3 1.7.3h5.8c.6 0 1.2-.1 1.7-.3.9-.4 1.7-1.1 2.1-2.1.2-.5.3-1.1.3-1.7V15v-2.9c0-.6-.1-1.2-.3-1.7-.4-.9-1.1-1.7-2.1-2.1-.4-.2-1.1-.3-1.7-.3-.7-.1-1-.1-2.9-.1zm0 3.5c-2 0-3.6 1.6-3.6 3.6s1.6 3.6 3.6 3.6 3.6-1.6 3.6-3.6c0-1.9-1.6-3.6-3.6-3.6zm0 6c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3c.1 1.2-1 2.3-2.3 2.3zm4.7-6.2c0 .5-.4.8-.8.8-.5 0-.8-.4-.8-.8 0-.5.4-.8.8-.8s.8.3.8.8z"></path></svg></li>
+                            <li><svg><path d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15c-.1-8.3-6.8-15-15-15zm0 29C7.3 29 1 22.7 1 15S7.2.9 15 .9s14 6.3 14 14C29 22.7 22.7 29 15 29z M9 11.8h3v8.8H9v-8.8zm1.4-4.3c-.8-.1-1.5.5-1.5 1.3V9c-.1.8.6 1.5 1.4 1.6h.2c.8.1 1.5-.6 1.6-1.4V9c.1-.8-.5-1.5-1.3-1.6-.2.1-.3.1-.4.1zm8.6 4.1c-1.1 0-2.1.5-2.6 1.4v-1.2h-2.9v8.8h2.9v-4.9c0-.2 0-.4.1-.7.2-.7.9-1.1 1.6-1.1 1 0 1.4.7 1.4 2v4.8h2.8v-5.1c.1-2.8-1.3-4-3.3-4z"></path></svg></li>
+                        </ul>
+                    </div>
+                    <div class="myatt">
+                        <div><img src="images/logo/myatt_logo_rgb_blu_pos_R.png" /></div>
+                        <div>Manage Your AT&T<sup>®</sup> Account Whenever & Wherever You Want.</div>
+                        <div class="cta primary black">
+                            <span>Learn about the myAT&T app</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M6.64 13.35l-.71-.7L10.58 8 5.93 3.35l.71-.7L12 8z"/></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="link-help">
+                <ul>
+                    <li><a href="">Legal policy center</a></li>
+                    <li><a href="">Advertising choices</a></li>
+                    <li><a href="">Accessibility</a></li>
+                    <li><a href="">Sitemap</a></li>
+                    <li><a href="">Privacy details</a></li>
+                    <li><a href="">Broadband details</a></li>
+                    <li><a href="">Terms of use</a></li>
+                    <li><a href="">Do not sell my personal information</a></li>
+                </ul>
+            </div>
+            <div class="copy">
+                <div>&copy;2021 AT&T Intellectual Property. All rights reserved.</div>
+                <div>This site is protected by reCAPTCHA. <a href="">Privacy</a><a href="">Terms</a></div>
+            </div>
+        </div>
     </footer>
     
 </body>
